footer anchored and horizontal scroll fix

--- a/html/assignment3/css/style.css
+++ b/html/assignment3/css/style.css
@@ -1,4 +1,3 @@
-
 .title-slider .titles {
     float: left;
 }
@@ -15,7 +14,6 @@
     padding-left: 24px;
     padding-right: 24px;
     color: #fff;
-    
 }
 
 .submenu ul {
@@ -106,8 +104,9 @@
 }
 
 
+
 /*.slider-images{
-	margin:auto;
+    margin:auto;
 }*/
 
 .slider-images {
@@ -227,8 +226,9 @@
 }
 
 
+
 /*.related-preview ul{
-	display: inline-flex;
+    display: inline-flex;
 }*/
 
 .related-preview {
@@ -336,9 +336,11 @@ span.overlay-desc {
     width: 1170px;
     margin: auto;
 }
-.footer-lists li:before{
-	content:"> ";
+
+.footer-lists li:before {
+    content: "> ";
 }
+
 .first ul li a {
     font-size: 20px;
     font-weight: 600;
@@ -517,6 +519,8 @@ span.overlay-desc {
 .social ul li a:hover .fa-rss {
     color: #f26522;
 }
-.main-menu ul li.dropbtn:before{
-
+.footer-lists li a{
+    color:#fff;
 }
+
+.main-menu ul li.dropbtn:before {}
